<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gaukhar.dauzhan.bookapp.MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="35dp"
        tools:layout_editor_absoluteX="105dp" />
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />
    <TextView
        android:id="@+id/tv_book_lover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_book_lover"
        android:textSize="25sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp" />


    <Button
        android:id="@+id/btn_go_to_read_activity"
        android:layout_height="50dp"
        android:layout_width="100dp"
        android:gravity="center"
        android:text="GO!"
        android:onClick="butLanClick"
        app:layout_constraintTop_toBottomOf="@id/tv_book_lover"

        android:layout_marginTop="0dp" />

</android.support.constraint.ConstraintLayout>
