<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:src="@mipmap/ic_launcher"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Добро пожаловать!"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/choose_language_of_the_book"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_rus"
                android:layout_width="75dp"
                android:layout_height="31dp"
                android:background="@color/colorAccent"
                android:onClick="butLanClick"
                android:text="@string/btn_rus"
                android:textColor="@color/colorDarkGray"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btn_kaz"
                android:layout_width="72dp"
                android:layout_height="31dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:onClick="butLanClick"
                android:text="@string/btn_kaz"
                android:textColor="@color/colorDarkGray"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>